--- a/PersonalityCheck.API/PersonalityCheck.API.csproj
+++ b/PersonalityCheck.API/PersonalityCheck.API.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PersonalityCheck\PersonalityCheck.BLL\PersonalityCheck.BLL.csproj" />
+    <ProjectReference Include="..\PersonalityCheck.BLL\PersonalityCheck.BLL.csproj" />
   </ItemGroup>
 
 </Project>
